@@ -1177,6 +1177,28 @@ XConsortium: rgb.txt,v 10.41 94/02/20 18:39:36 rws Exp")
 
 ;;;; Function keys
 
+(defvar x-alternatives-map
+  (let ((map (make-sparse-keymap)))
+    ;; Map certain keypad keys into ASCII characters that people usually expect.
+    (define-key map [backspace] [127])
+    (define-key map [delete] [127])
+    (define-key map [tab] [?\t])
+    (define-key map [linefeed] [?\n])
+    (define-key map [clear] [?\C-l])
+    (define-key map [return] [?\C-m])
+    (define-key map [escape] [?\e])
+    (define-key map [M-backspace] [?\M-\d])
+    (define-key map [M-delete] [?\M-\d])
+    (define-key map [M-tab] [?\M-\t])
+    (define-key map [M-linefeed] [?\M-\n])
+    (define-key map [M-clear] [?\M-\C-l])
+    (define-key map [M-return] [?\M-\C-m])
+    (define-key map [M-escape] [?\M-\e])
+    (define-key map [iso-lefttab] [backtab])
+    (define-key map [S-iso-lefttab] [backtab]))
+    map)
+  "Keymap of possible alternative meanings for some keys.")
+
 (defun x-setup-function-keys (frame)
   "Set up `function-key-map' on FRAME for the X window system."
   ;; Don't do this twice on the same display, or it would break
@@ -1184,22 +1206,9 @@ XConsortium: rgb.txt,v 10.41 94/02/20 18:39:36 rws Exp")
   (unless (terminal-parameter frame 'x-setup-function-keys)
     ;; Map certain keypad keys into ASCII characters that people usually expect.
     (with-selected-frame frame
-      (define-key local-function-key-map [backspace] [127])
-      (define-key local-function-key-map [delete] [127])
-      (define-key local-function-key-map [tab] [?\t])
-      (define-key local-function-key-map [linefeed] [?\n])
-      (define-key local-function-key-map [clear] [?\C-l])
-      (define-key local-function-key-map [return] [?\C-m])
-      (define-key local-function-key-map [escape] [?\e])
-      (define-key local-function-key-map [M-backspace] [?\M-\d])
-      (define-key local-function-key-map [M-delete] [?\M-\d])
-      (define-key local-function-key-map [M-tab] [?\M-\t])
-      (define-key local-function-key-map [M-linefeed] [?\M-\n])
-      (define-key local-function-key-map [M-clear] [?\M-\C-l])
-      (define-key local-function-key-map [M-return] [?\M-\C-m])
-      (define-key local-function-key-map [M-escape] [?\M-\e])
-      (define-key local-function-key-map [iso-lefttab] [backtab])
-      (define-key local-function-key-map [S-iso-lefttab] [backtab]))
+      (let ((map (copy-keymap x-alternatives-map)))
+        (set-keymap-parent map (keymap-parent local-function-key-map))
+        (set-keymap-parent local-function-key-map map)))
     (set-terminal-parameter frame 'x-setup-function-keys t)))
 
 ;; These tell read-char how to convert
